added placeholder implementation of services
