# backend/main.go
@@ -5,6 +5,7 @@ import (
 	"errors"
 	"net/http"
 	"strconv"
+	"strings"
 	"time"
 
 	"github.com/gin-gonic/gin"
@@ -40,13 +41,48 @@ var allResults []LeaderboardEntryDTO
 var gameState *QueueItemDTO = nil
 var queue = []QueueItemDTO{}
 
+// getContestants returns a list of ContestantDTOs filtered by the given string
+//
+// The filter string can have the following values:
+//
+// - "NOT_ENQUEUED": returns all contestants that are not in the queue
+// - "ENQUEUED": returns all contestants that are in the queue
+// - "ALL": returns all contestants
+//
+// If the filter string is not recognized, the function returns nil.
 func getContestants(filter string) []ContestantDTO {
 
 	switch filter {
 	case "NOT_ENQUEUED":
-		return allContestants
+		contenstantList := []ContestantDTO{}
+		for _, contestant := range allContestants {
+			found := false
+			for _, queueItem := range queue {
+				if queueItem.Contestant.Email == contestant.Email {
+					found = true
+					break
+				}
+			}
+			if !found {
+				contenstantList = append(contenstantList, contestant)
+			}
+		}
+		return contenstantList
 	case "ENQUEUED":
-		return allContestants
+		contenstantList := []ContestantDTO{}
+		for _, contestant := range allContestants {
+			found := false
+			for _, queueItem := range queue {
+				if queueItem.Contestant.Email == contestant.Email {
+					found = true
+					break
+				}
+			}
+			if found {
+				contenstantList = append(contenstantList, contestant)
+			}
+		}
+		return contenstantList
 	case "ALL":
 		return allContestants
 	default:
@@ -54,6 +90,9 @@ func getContestants(filter string) []ContestantDTO {
 	}
 }
 
+// addContestant adds a new contestant to the list of all contestants and enqueues them.
+// If the contestant already exists, they are only enqueued.
+// Returns the QueueItemDTO for the enqueued contestant or an error.
 func addContestant(contestant ContestantDTO) (QueueItemDTO, error) {
 	for _, c := range allContestants {
 		if c.Email == contestant.Email {
@@ -66,49 +105,84 @@ func addContestant(contestant ContestantDTO) (QueueItemDTO, error) {
 	return newQueueItem, nil
 }
 
+// enqueueContestant adds a contestant to the queue with the current timestamp.
+// Returns the QueueItemDTO for the enqueued contestant and an error if any occurs.
 func enqueueContestant(contestant ContestantDTO) (QueueItemDTO, error) {
 	newQueueItem := QueueItemDTO{time.Now().UnixNano(), contestant}
 	queue = append(queue, newQueueItem)
 	return newQueueItem, nil
 }
 
-func startGame() error {
+// startGame initiates a game with the first contestant in the queue if the game is not already in progress.
+// It removes the contestant from the queue and sets the game state.
+// Returns an error if the queue is empty or if a game is already in progress.
+func startGame() (QueueItemDTO, error) {
+	// Check if the queue is not empty
 	if len(queue) > 0 {
-		queueItem := queue[0]
-
+		// If the game is not in progress, start it with the first item in the queue
 		if gameState == nil {
+			queueItem := queue[0]
+			queue = queue[1:]
 			gameState = &queueItem
-			return nil
+			return queueItem, nil
 		} else {
-			return errors.New("game is already in progress")
+			return *gameState, errors.New("game is already in progress")
 		}
 
 	} else {
-		return errors.New("queue is empty")
+		return *gameState, errors.New("queue is empty")
 	}
 }
 
-func finishGame(result GameResultDTO) []LeaderboardEntryDTO {
+// finishGame finishes the current game with the given result and updates the leaderboard.
+// It returns the updated leaderboard or an error if the game is not in progress.
+// If the contestant already has a result in the leaderboard, the new result is only added if it is better than the previous result.
+func finishGame(result GameResultDTO) ([]LeaderboardEntryDTO, error) {
+	// Check if the game is in progress
+	if gameState != nil {
+		leaderboardEntry := LeaderboardEntryDTO{gameState.Contestant, result}
 
-	leaderboardEntry := LeaderboardEntryDTO{gameState.Contestant, result}
+		// Check if the contestant already has a result
+		for i, entry := range allResults {
+			if entry.Contestant.Email == leaderboardEntry.Contestant.Email {
+				// Update the result if the new result is better
+				if leaderboardEntry.GameResult.EndTime < entry.GameResult.EndTime {
+					allResults[i] = leaderboardEntry
+					gameState = nil
+					return allResults, nil
+				}
+			}
+		}
+		// Otherwise, add the new result
+		allResults = append(allResults, leaderboardEntry)
 
-	allResults = append(allResults, leaderboardEntry)
-	return allResults
+		gameState = nil
+		return allResults, nil
+	} else {
+		return nil, errors.New("game is not in progress")
+	}
 }
 
+// abortGame aborts the current game by resetting the game state.
+// It returns nil if successful, indicating the game state has been reset.
 func abortGame() error {
+	// Reset the game state
+	gameState = nil
 	return nil
 }
 
+// deleteQueueItem deletes the queue item with the given timestamp.
+// It returns nil if the item was found and deleted, or an error if the item was not found.
 func deleteQueueItem(timestamp int64) error {
 
-	for _, entry := range queue {
+	for i, entry := range queue {
 		if entry.Timestamp == timestamp {
-
+			queue = append(queue[:i], queue[i+1:]...)
+			return nil
 		}
 	}
 
-	return nil
+	return errors.New("queue item not found")
 }
 
 // @BasePath /api/v1
@@ -125,7 +199,7 @@ func deleteQueueItem(timestamp int64) error {
 // @Router /contestants [get]
 func getContestantsHandler(g *gin.Context) {
 	// GET /contestants?filter={ALL,NOT_ENQUEUED,ENQUEUED}
-	filter := g.DefaultQuery("filter", "ALL")
+	filter := strings.TrimSpace(g.DefaultQuery("filter", "ALL"))
 
 	contestants := getContestants(filter)
 	if contestants == nil {
@@ -169,21 +243,22 @@ func addContestantHandler(g *gin.Context) {
 // @Tags example
 // @Accept json
 // @Produce json
-// @Success 200 {object} ContestantDTO
+// @Success 200 {object} QueueItemDTO
 // @Router /game-start [post]
 func gameStartHandler(g *gin.Context) {
-	contestant := ContestantDTO{}
+	/*contestant := ContestantDTO{}
 	if err := g.BindJSON(&contestant); err != nil {
 		g.AbortWithError(http.StatusBadRequest, err)
 		return
-	}
+	}*/
 
-	if err := startGame(); err != nil {
+	queueItem, err := startGame()
+	if err != nil {
 		g.AbortWithError(http.StatusInternalServerError, err)
 		return
 	}
 
-	g.JSON(http.StatusOK, contestant)
+	g.JSON(http.StatusOK, queueItem)
 }
 
 // gameFinishHandler godoc
@@ -203,7 +278,11 @@ func gameFinishHandler(g *gin.Context) {
 		return
 	}
 
-	leaderboard := finishGame(gameResult)
+	leaderboard, err := finishGame(gameResult)
+	if err != nil {
+		g.AbortWithError(http.StatusInternalServerError, err)
+		return
+	}
 
 	g.JSON(http.StatusOK, leaderboard)
 }
@@ -228,6 +307,19 @@ func gameAbortHandler(g *gin.Context) {
 	g.JSON(http.StatusOK, "aborted")
 }
 
+// getQueue godoc
+// @Summary Get the queue
+// @Schemes
+// @Description Get the current queue
+// @Tags example
+// @Accept json
+// @Produce json
+// @Success 200 {array} QueueItemDTO
+// @Router /queue [get]
+func getQueueHandler(g *gin.Context) {
+	g.JSON(http.StatusOK, queue)
+}
+
 // deleteQueueItemHandler godoc
 // @Summary Delete a contestant from the queue
 // @Schemes
@@ -248,9 +340,26 @@ func deleteQueueItemHandler(g *gin.Context) {
 		return
 	}
 
-	deleteQueueItem(timestamp)
+	err = deleteQueueItem(timestamp)
+	if err != nil {
+		g.AbortWithError(http.StatusNotFound, err)
+		return
+	}
 
 	g.Status(http.StatusOK)
+}
+
+// getLeaderboardHandler godoc
+// @Summary Get leaderboard
+// @Schemes
+// @Description Retrieve the current leaderboard
+// @Tags example
+// @Accept json
+// @Produce json
+// @Success 200 {array} LeaderboardEntryDTO
+// @Router /leaderboard [get]
+func getLeaderboardHandler(g *gin.Context) {
+	g.JSON(http.StatusOK, allResults)
 }
 
 // main starts a gin server and maps all the available endpoints
@@ -264,7 +373,9 @@ func main() {
 		v1.POST("/game-start", gameStartHandler)
 		v1.POST("/game-finish", gameFinishHandler)
 		v1.POST("/game-abort", gameAbortHandler)
-		v1.DELETE("/queue-item/:timestamp", deleteQueueItemHandler)
+		v1.GET("/queue", getQueueHandler)
+		v1.DELETE("/queue/:timestamp", deleteQueueItemHandler)
+		v1.GET("/leaderboard", getLeaderboardHandler)
 	}
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	r.Run(":8080")
